feat: add spring security jwt authentication